cmake_minimum_required(VERSION 3.21)
project(CPP_OOP)

set(CMAKE_CXX_STANDARD 14)

add_executable(CPP_OOP lesson2.cpp Person.cpp Person.h Helpers.h Student.cpp Student.h Fruit.cpp Fruit.h Apple.cpp Apple.h Banana.cpp Banana.h GrannySmith.cpp GrannySmith.h BlackJack/Card.cpp BlackJack/Card.h BlackJack/Player.cpp BlackJack/Player.h BlackJack/Game.cpp BlackJack/Game.h BlackJack/Pack.cpp BlackJack/Pack.h)
